# Twitter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  Twitter.mdj  docker-compose.yml  pyproject.toml  run.sh  testing.env
docker/: production.yml  testing.yml
src/domain/: auth.py
src/twitter/domain/: tweets.py
tests/: base.py  conftest.py  test_db_connection.py  test_startup.py
tests/e2e/: test_auth.py
tests/unit/services/auth/: test_otp.py  test_password_encryption.py
twitter/: __main__.py  alembic.ini  bootstrap.py  config.py
twitter/adapters/: background_tasks.py  orm.py
twitter/adapters/pub_sub/: redis_adapter.py
twitter/adapters/repositories/: __init__.py  abstract.py  profiles.py  tweets.py  users.py
twitter/domain/: __init__.py  auth.py  polls.py  tweets.py  types.py
twitter/entrypoints/celery_app/: __init__.py
twitter/entrypoints/email_verification/: __init__.py
twitter/entrypoints/fastapi_app/: __init__.py
twitter/entrypoints/fastapi_app/routers/: auth.py  tweets.py
twitter/migrations/: env.py
twitter/migrations/versions/: ce02ec1ffb51_create_a_baseline_migrations.py
twitter/presentation/messages/: auth.py
twitter/presentation/schemas/: auth.py  base.py  tweet.py
twitter/services/: unit_of_work.py
twitter/services/auth/: __init__.py  exceptions.py  otp.py
twitter/services/email/: __init__.py  abstract.py  fake.py  publisher.py  smtp_mail_service.py  subscriber.py
