[tool.poetry]
name = "twitter"
version = "0.1.0"
description = "Fully featured twitter core clone"
authors = ["n-freman <nazarannanazarov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ruff = "^0.0.272"
pytest = "^7.3.2"
coverage = "^7.2.7"


[tool.poetry.group.fastapi.dependencies]
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
command_line = "-m twitter"